[gd_scene load_steps=5 format=2]

[ext_resource path="res://grid.png" type="Texture" id=1]
[ext_resource path="res://InventoryUI.gd" type="Script" id=2]
[ext_resource path="res://EquipmentSlots.gd" type="Script" id=3]
[ext_resource path="res://GridBackPack.gd" type="Script" id=4]

[node name="InventoryUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBase" type="Panel" parent="."]
margin_left = -361.0
margin_top = -213.0
margin_right = 389.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSlots" type="Panel" parent="."]
self_modulate = Color( 0.145098, 0.145098, 0.145098, 1 )
margin_left = 138.0
margin_top = -177.0
margin_right = 360.0
margin_bottom = 207.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HEAD" type="Panel" parent="EquipmentSlots"]
margin_left = 93.0
margin_top = 41.0
margin_right = 133.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHEST" type="Panel" parent="EquipmentSlots"]
margin_left = 69.0
margin_top = 104.0
margin_right = 156.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEGS" type="Panel" parent="EquipmentSlots"]
margin_left = 82.0
margin_top = 243.0
margin_right = 144.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAIN_HAND" type="Panel" parent="EquipmentSlots"]
margin_left = 15.0
margin_top = 106.0
margin_right = 55.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OFF_HAND" type="Panel" parent="EquipmentSlots"]
margin_left = 170.0
margin_top = 108.0
margin_right = 210.0
margin_bottom = 207.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackPack" type="TextureRect" parent="."]
self_modulate = Color( 0.145098, 0.145098, 0.145098, 1 )
margin_left = -335.0
margin_top = -107.0
margin_right = 113.0
margin_bottom = 149.0
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
